Bug 146342 - Spell correction suggestions don't work
Summary: Spell correction suggestions don't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-12-21 05:36 UTC by Elmar
Modified: 2022-01-07 08:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2021-12-21 05:36:49 UTC
Description:
When right click on an underligned word, nothing happens.

Steps to Reproduce:
1. RCLK on underlined word
2. 
3.

Actual Results:
nothing happens

Expected Results:
should provide list of possibilities


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 17a4f4d5e4d49189b43e748271d2d4fa330eef9b
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Suspect this is because of new(?) approach - the old daily builds no longer there. https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF/
I did find where the new builds are, but does not include language packs.
Cannot figure out from the README how to work around.

Sadly, will have to revert to 7.3
Comment 1 Buovjaga 2021-12-21 07:23:16 UTC
(In reply to Elmar from comment #0)
> Suspect this is because of new(?) approach - the old daily builds no longer
> there.
> https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF/
> I did find where the new builds are, but does not include language packs.
> Cannot figure out from the README how to work around.
> 
> Sadly, will have to revert to 7.3

Not a new approach, but a tinderbox (build box) being gone. So you are looking for the missing tinderbox number 86. For Linux there is now one called 87. See https://dev-builds.libreoffice.org/daily/master/ or the more helpful https://dev-builds.libreoffice.org/daily/master/current.html
Comment 2 Kevin Suo 2021-12-29 01:41:23 UTC
I can reproduce on today's master on Fedora 34, Gnome 40.4, Wayland.

No need for the lang pack. Just type in "Helloo", you will see the under wave line. Right click on it, there should be a suggestion.

Bibisected and bisected to:

commit afa35742a4633db31b6d6c72cf45741506e9edfb
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sat Dec 11 21:09:39 2021 +0000

    prefer more css::awt::XPopupMenu api

Adding Caolán to cc: could you please take a look? Thanks.
Comment 3 Elmar 2021-12-29 08:55:11 UTC
I managed to find the place where 7.4 alpha is located, however, when I download and install the EN-GB language pack, I get an error that all dependencies cannot be met.

last one I tried:
https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@tb87-TDF/2021-12-18_08.36.12/
Comment 4 Commit Notification 2022-01-07 08:55:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e4ddea574b18aeed678526cac42f45613b4ae20

Resolves: tdf#146342 spelling menu doesn't appear

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.