Resolves: tdf#146342 spelling menu doesn't appear

the XPopupMenu from CreateMenuInterface owns the vcl menu after it's
created.

Change-Id: I0959b3359a4683ce8ca50912136f829b8bbee859